--- a/.github/workflows/scan-skills.yml
+++ b/.github/workflows/scan-skills.yml
@@ -18,13 +18,20 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install dependencies
+      - name: Install Python dependencies
         run: |
           pip install -r requirements.txt
 
+      - name: Install Ollama
+        run: |
+          curl -fsSL https://ollama.com/install.sh | sh
+
+      - name: Pull Llama3 Model
+        run: |
+          ollama pull llama3
+
       - name: Run security scanner
         env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           python scanner/scan.py
